// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Editor Component > renders the Editor correctly 1`] = `
.c0 {
  padding: 0.1rem 0.2rem;
  width: 1.2rem;
  height: 1.7rem;
  cursor: pointer;
}

.c1 {
  padding: 0.1rem 0.2rem;
  width: 1.2rem;
  height: 1.7rem;
  border: 0.5px solid #fff;
  background-color: lightgrey;
  cursor: pointer;
}

.c2 {
  width: 100%;
  height: 100%;
  background-color: black;
  border: 1px solid black;
  border-radius: 5px;
  transform: skew(     -20deg   );
}

.c3 {
  width: 100%;
  height: 100%;
  background-color: white;
  border: 1px solid black;
  border-radius: 5px;
  transform: skew(     -20deg   );
}

.c4 {
  width: 100%;
  height: 100%;
  background-color: black;
  border: 1px solid black;
  border-radius: 5px;
  transform: skew(     20deg   );
}

.c5 {
  width: 100%;
  height: 100%;
  background-color: white;
  border: 1px solid black;
  border-radius: 5px;
  transform: skew(     20deg   );
}

<div
  class="inline-flex justify-center"
  title="tablets-panel"
>
  <div>
    <div
      class="c0"
    />
    <div
      class="c0 row-A"
      title="hole name"
    >
      <span>
        A
      </span>
    </div>
    <div
      class="c0 row-B"
      title="hole name"
    >
      <span>
        B
      </span>
    </div>
    <div
      class="c0 row-C"
      title="hole name"
    >
      <span>
        C
      </span>
    </div>
    <div
      class="c0 row-D"
      title="hole name"
    >
      <span>
        D
      </span>
    </div>
    <div
      class="c0"
    />
  </div>
  <div>
    <div
      class="c0 col-0"
      title="column number"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="c1 col-0 row-3 change-color"
      title="change color"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-0 row-2 change-color"
      title="change color"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-0 row-1 change-color"
      title="change color"
    >
      <div
        class="c3"
      />
    </div>
    <div
      class="c1 col-0 row-0 change-color"
      title="change color"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c0 col-0 toggle-skew skew-S"
      title="toggle skew"
    >
      <span>
        S
      </span>
    </div>
  </div>
  <div>
    <div
      class="c0 col-1"
      title="column number"
    >
      <span>
        2
      </span>
    </div>
    <div
      class="c1 col-1 row-3 change-color"
      title="change color"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-1 row-2 change-color"
      title="change color"
    >
      <div
        class="c3"
      />
    </div>
    <div
      class="c1 col-1 row-1 change-color"
      title="change color"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-1 row-0 change-color"
      title="change color"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c0 col-1 toggle-skew skew-S"
      title="toggle skew"
    >
      <span>
        S
      </span>
    </div>
  </div>
  <div>
    <div
      class="c0 col-2"
      title="column number"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="c1 col-2 row-3 change-color"
      title="change color"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-2 row-2 change-color"
      title="change color"
    >
      <div
        class="c5"
      />
    </div>
    <div
      class="c1 col-2 row-1 change-color"
      title="change color"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-2 row-0 change-color"
      title="change color"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c0 col-2 toggle-skew skew-Z"
      title="toggle skew"
    >
      <span>
        Z
      </span>
    </div>
  </div>
  <div>
    <div
      class="c0 col-3"
      title="column number"
    >
      <span>
        4
      </span>
    </div>
    <div
      class="c1 col-3 row-3 change-color"
      title="change color"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-3 row-2 change-color"
      title="change color"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-3 row-1 change-color"
      title="change color"
    >
      <div
        class="c5"
      />
    </div>
    <div
      class="c1 col-3 row-0 change-color"
      title="change color"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c0 col-3 toggle-skew skew-Z"
      title="toggle skew"
    >
      <span>
        Z
      </span>
    </div>
  </div>
  <div>
    <div
      class="c0"
    />
    <div
      class="c0 row-A"
      title="hole name"
    >
      <span>
        A
      </span>
    </div>
    <div
      class="c0 row-B"
      title="hole name"
    >
      <span>
        B
      </span>
    </div>
    <div
      class="c0 row-C"
      title="hole name"
    >
      <span>
        C
      </span>
    </div>
    <div
      class="c0 row-D"
      title="hole name"
    >
      <span>
        D
      </span>
    </div>
    <div
      class="c0"
    />
  </div>
</div>
`;

exports[`Editor Component > renders the Editor correctly 2`] = `
.c0 {
  padding: 0.1rem 0.2rem;
  width: 1.2rem;
  height: 1.7rem;
  cursor: pointer;
}

.c1 {
  padding: 0.1rem 0.2rem;
  width: 1.2rem;
  height: 1.7rem;
  border: 0.5px solid #fff;
  background-color: lightgrey;
  cursor: pointer;
}

.c2 {
  width: 100%;
  height: 100%;
  background-color: black;
  border: 1px solid black;
  border-radius: 5px;
  transform: skew(     -20deg   );
}

.c3 {
  width: 100%;
  height: 100%;
  background-color: white;
  border: 1px solid black;
  border-radius: 5px;
  transform: skew(     -20deg   );
}

.c4 {
  width: 100%;
  height: 100%;
  background-color: black;
  border: 1px solid black;
  border-radius: 5px;
  transform: skew(     20deg   );
}

.c5 {
  width: 100%;
  height: 100%;
  background-color: white;
  border: 1px solid black;
  border-radius: 5px;
  transform: skew(     20deg   );
}

<div
  class="inline-flex g-4 justify-center"
  title="threads-panel"
>
  <div>
    <div
      class="c0"
    />
    <div
      class="c0 row-7"
      title="row number"
    >
      <span>
        8
      </span>
    </div>
    <div
      class="c0 row-6"
      title="row number"
    >
      <span>
        7
      </span>
    </div>
    <div
      class="c0 row-5"
      title="row number"
    >
      <span>
        6
      </span>
    </div>
    <div
      class="c0 row-4"
      title="row number"
    >
      <span>
        5
      </span>
    </div>
    <div
      class="c0 row-3"
      title="row number"
    >
      <span>
        4
      </span>
    </div>
    <div
      class="c0 row-2"
      title="row number"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="c0 row-1"
      title="row number"
    >
      <span>
        2
      </span>
    </div>
    <div
      class="c0 row-0"
      title="row number"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="c0"
    />
  </div>
  <div>
    <div
      class="c0 col-0"
      title="column number"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="c1 col-0 row-7 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-0 row-6 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-0 row-5 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c3"
      />
    </div>
    <div
      class="c1 col-0 row-4 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-0 row-3 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-0 row-2 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-0 row-1 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c3"
      />
    </div>
    <div
      class="c1 col-0 row-0 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c0 col-0 toggle-skew skew-S"
      title="toggle skew"
    >
      <span>
        S
      </span>
    </div>
  </div>
  <div>
    <div
      class="c0 col-1"
      title="column number"
    >
      <span>
        2
      </span>
    </div>
    <div
      class="c1 col-1 row-7 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-1 row-6 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c3"
      />
    </div>
    <div
      class="c1 col-1 row-5 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-1 row-4 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-1 row-3 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-1 row-2 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c3"
      />
    </div>
    <div
      class="c1 col-1 row-1 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c1 col-1 row-0 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c0 col-1 toggle-skew skew-S"
      title="toggle skew"
    >
      <span>
        S
      </span>
    </div>
  </div>
  <div>
    <div
      class="c0 col-2"
      title="column number"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="c1 col-2 row-7 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-2 row-6 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c5"
      />
    </div>
    <div
      class="c1 col-2 row-5 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-2 row-4 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-2 row-3 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-2 row-2 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c5"
      />
    </div>
    <div
      class="c1 col-2 row-1 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-2 row-0 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c0 col-2 toggle-skew skew-Z"
      title="toggle skew"
    >
      <span>
        Z
      </span>
    </div>
  </div>
  <div>
    <div
      class="c0 col-3"
      title="column number"
    >
      <span>
        4
      </span>
    </div>
    <div
      class="c1 col-3 row-7 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-3 row-6 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-3 row-5 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c5"
      />
    </div>
    <div
      class="c1 col-3 row-4 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-3 row-3 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-3 row-2 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c1 col-3 row-1 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c5"
      />
    </div>
    <div
      class="c1 col-3 row-0 toggle-rotation-direction dir-forward"
      title="toggle rotation direction"
    >
      <div
        class="c4"
      />
    </div>
    <div
      class="c0 col-3 toggle-skew skew-Z"
      title="toggle skew"
    >
      <span>
        Z
      </span>
    </div>
  </div>
  <div>
    <div
      class="c0"
    />
    <div
      class="c0 row-7"
      title="row number"
    >
      <span>
        8
      </span>
    </div>
    <div
      class="c0 row-6"
      title="row number"
    >
      <span>
        7
      </span>
    </div>
    <div
      class="c0 row-5"
      title="row number"
    >
      <span>
        6
      </span>
    </div>
    <div
      class="c0 row-4"
      title="row number"
    >
      <span>
        5
      </span>
    </div>
    <div
      class="c0 row-3"
      title="row number"
    >
      <span>
        4
      </span>
    </div>
    <div
      class="c0 row-2"
      title="row number"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="c0 row-1"
      title="row number"
    >
      <span>
        2
      </span>
    </div>
    <div
      class="c0 row-0"
      title="row number"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="c0"
    />
  </div>
</div>
`;

exports[`Editor Component > renders the Editor correctly 3`] = `
.c0 {
  display: none;
}

<div
  title="file-panel"
>
  <div
    class="flex gap-2"
  >
    <div>
      <input
        accept=".json"
        class="c0 hidden-file-upload-input"
        id="file-input-1704067200000"
        type="file"
      />
      <input
        class="file-upload-input input input-bordered input-sm rounded-none"
        name="File name"
        type="text"
        value="draft example"
      />
    </div>
    <div
      class="flex gap-2"
    >
      <button
        class="btn btn-sm  btn-secondary shadow-md shadow-gray-300 rounded-none file-upload-button "
        type="button"
      >
        Save project
      </button>
      <button
        class="btn btn-sm  btn-primary shadow-md shadow-gray-300 rounded-none  undefined"
        type="button"
      >
        Open
      </button>
    </div>
  </div>
  <div
    class="flex  gap-2 py-4"
  >
    <span>
       Examples:
    </span>
    <button>
      draft 1
    </button>
    <button>
      draft 2
    </button>
    <button>
      draft 3
    </button>
  </div>
</div>
`;

exports[`Editor Component > renders the Editor correctly 4`] = `
.c0 {
  display: none;
}

<div
  class="inline-flex flex-col gap-4 "
  title="control-panel"
>
  <h2>
    Control Panel
  </h2>
  <div
    class="flex flex-col gap-1"
    title="inputs-panel"
  >
    <div
      class="flex gap-2"
    >
      <label
        class="min-w-16"
      >
        Holes:
      </label>
      <input
        class="w-8 text-center"
        readonly=""
        title="holes-input"
        type="number"
        value="4"
      />
      <button
        class="btn btn-xs btn-neutral w-8 text-center"
        title="holes-input decrement"
      >
        <span>
          -
        </span>
      </button>
      <button
        class="btn btn-xs btn-neutral w-8 text-center"
        title="holes-input increment"
      >
        <span>
          +
        </span>
      </button>
    </div>
    <div
      class="flex gap-2"
    >
      <label
        class="min-w-16"
      >
        Picks:
      </label>
      <input
        class="w-8 text-center"
        readonly=""
        title="picks-input"
        type="number"
        value="8"
      />
      <button
        class="btn btn-xs btn-neutral w-8 text-center"
        title="picks-input decrement"
      >
        <span>
          -
        </span>
      </button>
      <button
        class="btn btn-xs btn-neutral w-8 text-center"
        title="picks-input increment"
      >
        <span>
          +
        </span>
      </button>
    </div>
    <div
      class="flex gap-2"
    >
      <label
        class="min-w-16"
      >
        Tablets:
      </label>
      <input
        class="w-8 text-center"
        readonly=""
        title="tablets-input"
        type="number"
        value="4"
      />
      <button
        class="btn btn-xs btn-neutral w-8 text-center"
        title="tablets-input decrement"
      >
        <span>
          -
        </span>
      </button>
      <button
        class="btn btn-xs btn-neutral w-8 text-center"
        title="tablets-input increment"
      >
        <span>
          +
        </span>
      </button>
    </div>
  </div>
  <div
    class="flex flex-col gap-2"
    title="colors-panel"
  >
    <div
      class="flex gap-1"
    >
      <button
        class="w-[1.5rem] h-[1.5rem] cursor-pointer border-2 border-gray-400 border-dashed"
        style="background-color: rgb(0, 0, 0);"
        title="#000000"
      />
      <button
        class="w-[1.5rem] h-[1.5rem] cursor-pointer border-[0.5px] border-gray-400 border-solid"
        style="background-color: rgb(192, 192, 192);"
        title="#C0C0C0"
      />
      <button
        class="w-[1.5rem] h-[1.5rem] cursor-pointer border-[0.5px] border-gray-400 border-solid"
        style="background-color: rgb(0, 0, 255);"
        title="#0000FF"
      />
      <button
        class="w-[1.5rem] h-[1.5rem] cursor-pointer border-[0.5px] border-gray-400 border-solid"
        style="background-color: rgb(0, 255, 0);"
        title="#00FF00"
      />
      <button
        class="w-[1.5rem] h-[1.5rem] cursor-pointer border-[0.5px] border-gray-400 border-solid"
        style="background-color: rgb(255, 255, 0);"
        title="#FFFF00"
      />
      <button
        class="w-[1.5rem] h-[1.5rem] cursor-pointer border-[0.5px] border-gray-400 border-solid"
        style="background-color: rgb(255, 165, 0);"
        title="#ffa500"
      />
      <button
        class="w-[1.5rem] h-[1.5rem] cursor-pointer border-[0.5px] border-gray-400 border-solid"
        style="background-color: rgb(255, 0, 0);"
        title="#FF0000"
      />
      <button
        class="w-[1.5rem] h-[1.5rem] cursor-pointer border-[0.5px] border-gray-400 border-solid"
        style="background-color: rgb(255, 255, 255);"
        title="#FFFFFF"
      />
    </div>
    <div
      class="flex gap-2 w-56"
    >
      <input
        class="input input-bordered rounded-none input-sm w-full"
        title="color-input"
        type="text"
        value="#000000"
      />
      <button
        class="btn btn-sm  btn-primary shadow-md shadow-gray-300 rounded-none  undefined"
        type="submit"
      >
        Change color
      </button>
    </div>
  </div>
  <div
    title="file-panel"
  >
    <div
      class="flex gap-2"
    >
      <div>
        <input
          accept=".json"
          class="c0 hidden-file-upload-input"
          id="file-input-1704067200000"
          type="file"
        />
        <input
          class="file-upload-input input input-bordered input-sm rounded-none"
          name="File name"
          type="text"
          value="draft example"
        />
      </div>
      <div
        class="flex gap-2"
      >
        <button
          class="btn btn-sm  btn-secondary shadow-md shadow-gray-300 rounded-none file-upload-button "
          type="button"
        >
          Save project
        </button>
        <button
          class="btn btn-sm  btn-primary shadow-md shadow-gray-300 rounded-none  undefined"
          type="button"
        >
          Open
        </button>
      </div>
    </div>
    <div
      class="flex  gap-2 py-4"
    >
      <span>
         Examples:
      </span>
      <button>
        draft 1
      </button>
      <button>
        draft 2
      </button>
      <button>
        draft 3
      </button>
    </div>
  </div>
</div>
`;
